# AgentDesk

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  NOTICE  OVERHAUL_LOG.md  README.md  TEST_PLAN.md  agentdesk.example.yaml  deadlock-sample.txt  justfile
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
dashboard/: package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
docs/: agent-onboarding.md  agent-quality.md  architecture.md  auto-queue-preflight.md  background-task-pattern.md  ci-self-hosted-runner.md  codex-remote-ssh-policy.md  codex-tui-cancel-boundary.md  discord-outbound-remaining-producers.md  discord-session-lifecycle.md  github-triage-routing.md  health-port-unification-checklist.md  invariants.md  launchd-to-routine-migration-plan.md  meeting-domain-expert-orchestration.md  memory-scope.md  multimachine-failover.md  openclaw-migrate.md  policy-sql-guard.md  policy-tick-bottleneck-735.md  recovery-paths.md  relay-live-state-taxonomy.md  relay-state-contract.md  session-binding.md  source-of-truth.md  voice-channel-migration.md  voice-e2e-results.md
migrations/: 001_initial.sql
policies/: 00-escalation.js  auto-queue.js  ci-recovery.js  default-pipeline.yaml  deploy-pipeline.js  kanban-rules.js  merge-automation.js  pipeline.js  review-automation.js  timeouts.js  triage-rules.js
routines/: family-profile-probe-obujang.js  family-profile-probe-yohoejang.js  local-worktree-gc.js
scripts/: _defaults.sh  agentdesk.service  analyze_prs.py  audit_allowlist.toml  audit_maintainability.py  audit_maintainability_config.toml  audit_maintainability_giant_baseline.toml  audit_state_lint_hardening.py  auto-queue-monitor.sh  auto_queue_monitor_state.py  build-release.sh  check-ci-runner-hardening.sh  check-portable-paths.py  check_agent_maintenance_docs.py  check_await_holding_lock_ratchet.py  check_clippy_allow_ratchet.py  check_contract_symbol_refs.py  check_hotfile_ratchet.py  check_inflight_blind_save_ratchet.py  check_log_key_drift.py  check_message_outbox_inserts.py  check_policy_db_capabilities.py  check_test_lane_coverage.py  ci-script-checks.sh  ci-timeout.py  clippy_allow_occurrences.json  com.agentdesk.plist  com.agentdesk.release.plist  deploy-dashboard.sh  deploy-dev.sh  deploy-release.sh  deploy.sh  e2e-tui-relay-scenarios.sh  e2e-wrapper-relay-toggle.sh  generate_inventory_docs.py  giant_file_issue_metadata.json  giant_file_registry.toml  hotfile_ratchet.toml  install.sh  intervention_log.py  (+18 more)
src/: api_caller_observability.rs  bootstrap.rs  config.rs  config_live_reload.rs  credential.rs  (+13 more)
(+1377 files in other folders)
