[package]
name = "agentdesk"
version = "0.1.2"
edition = "2024"
description = "AI agent orchestration platform"
license = "MIT"

[features]
legacy-sqlite-tests = ["dep:sqlite_test"]

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "chrono", "json", "uuid"] }

# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
poise = "0.6"

# Voice — 0.6.0 (Hoopoe) 부터 Discord DAVE/E2EE 프로토콜 지원. 2026-03-02 이후
# Discord 가 non-stage voice channel 에 DAVE 강제 (close code 4017). 0.4/0.5
# 는 거부되므로 0.6+ 필수. MSRV 1.83 (현재 1.94 사용 중 → OK).
songbird = { version = "0.6", default-features = false, features = ["driver", "gateway", "receive", "serenity", "rustls", "tungstenite"] }
hound = "3.5"
async-trait = "0.1"

# Policy engine (QuickJS)
rquickjs = { version = "0.9", features = ["bindgen", "classes", "properties", "parallel"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
json5 = "0.4"

# Utils
futures = "0.3"
ureq = { version = "2", features = ["json"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
chrono-tz = "0.10"
notify = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dirs = "6.0.0"
glob = "0.3"
which = "8.0.2"

# From RCC — text/formatting
unicode-width = "0.2"
textwrap = "0.16"
regex = "1"
unicode-normalization = "0.1"

# From RCC — crypto/encoding
base64 = "0.22"
blake3 = "1"

# From RCC — concurrency
dashmap = "6"

# From RCC — HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# From RCC — crypto
sha2 = "0.10"
hex = "0.4"
# #2049 Finding 11 — constant-time bearer comparison
subtle = "2"

# From RCC — misc
rand = "0.8"
libc = "0.2"
croner = "3.0.1"

sqlite_test = { package = "rusqlite", version = "0.32", features = ["bundled"], optional = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
